--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,92 +16,76 @@ on:
 
 
 jobs:
-  linter:
+  mysql:
     runs-on: ubuntu-latest
-    steps:
-
-      - name: Checkout Code Repository
-        uses: actions/checkout@v3.1.0
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.9"
-          cache: pip
-          cache-dependency-path: |
-            requirements/base.txt
-            requirements/dev.txt
-
-      - name: Run pre-commit
-        uses: pre-commit/action@v3.0.0
-
-  test-sqlite:
-    name: "Python ${{ matrix.python-version }} - sqlite"
-    runs-on: "ubuntu-latest"
-    env:
-        BACKEND: sqlite
-
     strategy:
+      fail-fast: false
+      max-parallel: 5
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ['3.8', '3.9', '3.10']
+#         mariadb-version: ["10.3", "10.5"]
 
-    steps:
-      - uses: "actions/checkout@v3.1.0"
-      - uses: "actions/setup-python@v4"
-        with:
-          python-version: "${{ matrix.python-version }}"
-      - name: "Install dependencies"
-        run: |
-          python -VV
-          python -m site
-          python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
-
-      - name: "Run tox targets for ${{ matrix.python-version }}"
-        run: "python -m tox"
-
-      - if: ${{ matrix.python-version == '3.9' }}
-        name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-
-  test-mariadb:
-    name: "Python ${{ matrix.python-version }} - mariadb - ${{ matrix.mariadb-version }}"
-    runs-on: "ubuntu-latest"
-    env:
-      DBNAME: test
-      DBUSER: root
-      DBPASSWORD: rootpw
-      DBHOST: 127.0.0.1
-      BACKEND: mariadb
-
+  sqlite:
+    runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
+      max-parallel: 5
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
-        mariadb-version: ["10.3", "10.5"]
-
-    services:
-      database:
-        image: mariadb:${{ matrix.mariadb-version }}
-        env:
-          MYSQL_ROOT_PASSWORD: rootpw
-          MYSQL_DATABASE: test
-        ports:
-          - 3306:3306
-        options: --tmpfs /var/lib/mysql
+        python-version: ['3.8', '3.9', '3.10']
 
     steps:
-      - uses: "actions/checkout@v3.1.0"
-      - uses: "actions/setup-python@v4"
-        with:
-          python-version: "${{ matrix.python-version }}"
-      - name: "Install dependencies"
-        run: |
-          python -VV
-          python -m site
-          python -m pip install --upgrade pip setuptools wheel
-          python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions
+    - uses: actions/checkout@v3
 
-      - name: "Run tox targets for ${{ matrix.python-version }} and mariadb-${{ matrix.mariadb-version }}"
-        run: "python -m tox"
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade tox tox-gh-actions
+
+    - name: Test with tox
+      run: tox
+      env:
+        DBBACKEND: sqlite3
+        DBNAME: ":memory:"
+
+    - name: Upload coverage data
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-data
+        path: ".coverage.*"
+
+    # services:
+    #   mariadb:
+    #     image: mariadb:${{ matrix.mariadb-version }}
+    #     env:
+    #       MYSQL_ROOT_PASSWORD: rootpw
+    #       MYSQL_DATABASE: test
+    #     options: --tmpfs /var/lib/mysql
+    #     ports:
+    #     - 3306:3306
+    #
+    # steps:
+    #   - uses: "actions/checkout@v3.1.0"
+    #
+    #   - name: Set up Python ${{ matrix.python-version }}
+    #     uses: "actions/setup-python@v4"
+    #     with:
+    #       python-version: "${{ matrix.python-version }}"
+    #
+    #   - name: "Install dependencies"
+    #     run: |
+    #       python -m pip install --upgrade pip
+    #       python -m pip install --upgrade tox tox-gh-actions
+    #
+    #   - name: "Test with tox"
+    #     run: "tox"
+    #     env:
+    #       DBNAME: test
+    #       DBUSER: root
+    #       DBPASSWORD: rootpw
+    #       DBHOST: 127.0.0.1
+    #       DBBACKEND: mysql
