--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,44 +50,59 @@ jobs:
         name: coverage-data
         path: ".coverage.*"
 
-    # services:
-    #   mariadb:
-    #     image: mariadb:${{ matrix.mariadb-version }}
-    #     env:
-    #       MYSQL_ROOT_PASSWORD: rootpw
-    #       MYSQL_DATABASE: test
-    #     options: --tmpfs /var/lib/mysql
-    #     ports:
-    #     - 3306:3306
-    #
-    # steps:
-    #   - uses: "actions/checkout@v3.1.0"
-    #
-    #   - name: Set up Python ${{ matrix.python-version }}
-    #     uses: "actions/setup-python@v4"
-    #     with:
-    #       python-version: "${{ matrix.python-version }}"
-    #
-    #   - name: "Install dependencies"
-    #     run: |
-    #       python -m pip install --upgrade pip
-    #       python -m pip install --upgrade tox tox-gh-actions
-    #
-    #   - name: "Test with tox"
-    #     run: "tox"
-    #     env:
-    #       DBNAME: test
-    #       DBUSER: root
-    #       DBPASSWORD: rootpw
-    #       DBHOST: 127.0.0.1
-    #       DBBACKEND: mysql
 
+  mariadb:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      max-parallel: 5
+      matrix:
+        python-version: ['3.8', '3.9', '3.10']
+        mariadb-version: ["10.3", "10.5"]
+
+    services:
+      database:
+        image: mariadb:${{ matrix.mariadb-version }}
+        env:
+          MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: test
+        ports:
+          - 3306:3306
+        options: --tmpfs /var/lib/mysql
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade tox tox-gh-actions
+
+    - name: Test with tox
+      run: tox
+      env:
+        DBBACKEND: mysql
+        DBNAME: test
+        DBUSER: root
+        DBPASSWORD: rootpw
+        DBHOST: 127.0.0.1
+
+    - name: Upload coverage data
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-data
+        path: ".coverage.*"
 
 
   coverage:
     name: Check coverage.
     runs-on: "ubuntu-latest"
-    needs: [sqlite]
+    needs: [sqlite, mariadb]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
