Try again with mysql

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py{38,39,310}-django{32,41}-{sqlite,mariadb}
+envlist = py{38,39,310}-django{32,41}-{sqlite,mysql}
 isolated_build = true
 
 [testenv]
@@ -13,7 +13,7 @@ deps =
     coverage
     django-coverage-plugin
     freezegun
-    mariadb: mysqlclient
+    mysql: mysqlclient
 passenv =
     DBNAME
     DBUSER
@@ -24,7 +24,7 @@ passenv =
 commands =
     coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
 
-[testenv:py{38,39,310}-django{32,41}-mariadb]
+[testenv:py{38,39,310}-django{32,41}-mysql]
 setenv =
     DBBACKEND = mysql
 
@@ -37,4 +37,4 @@ python =
 [gh-actions:env]
 DBBACKEND =
     sqlite3: sqlite
-    mariadb: mariadb
+    mysql: mysql
