--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       max-parallel: 5
       matrix:
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.8']
 
     steps:
     - uses: actions/checkout@v3
@@ -51,14 +51,14 @@ jobs:
         path: ".coverage.*"
 
 
-  mariadb:
+  mysql:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       max-parallel: 5
       matrix:
-        python-version: ['3.8', '3.9', '3.10']
-        mariadb-version: ["10.3", "10.5"]
+        python-version: ['3.8']
+        mariadb-version: ["10.3"]
 
     services:
       database:
