Set DB env variables in tox sqlite env

--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,12 @@ commands =
 setenv =
     DBBACKEND = mysql
 
+[testenv:py{38,39,310}-dj{32,41}-sqlite]
+setenv =
+    {[testenv]setenv}
+    DBBACKEND = sqlite3
+    DBNAME = ":memory:"
+
 [gh-actions]
 python =
     3.8: py38
