--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,9 @@ install_requires =
     django-tables2 >= 2.4
     django-simple-history >= 3.1.1
     django-extensions >= 3.1.5
+    plotly >= 5.11.0
+    networkx >= 2.8.2
+    numpy >= 1.24
 
 
 [flake8]
