--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands =
 setenv =
     DBBACKEND = mysql
 
-[testenv:py{38,39,310}-dj{32,41,42}-sqlite]
+[testenv:py{38,39,310}-django{32,41,42}-sqlite]
 setenv =
     {[testenv]setenv}
     DBBACKEND = sqlite3
