--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,7 @@ jobs:
         python -m pip install --upgrade tox tox-gh-actions
 
     - name: Test with tox - 10.3
-      if: ${{ matrix.mariadb-version == "10.3" }}
+      if: ${{ matrix.mariadb-version == '10.3' }}
       run: tox --skip-env ".+?-django42-mysql"
       env:
         DBBACKEND: mysql
@@ -114,7 +114,7 @@ jobs:
         DBHOST: 127.0.0.1
 
     - name: Test with tox - not 10.3
-      if: ${{ matrix.mariadb-version != "10.3" }}
+      if: ${{ matrix.mariadb-version != '10.3' }}
       run: tox
       env:
         DBBACKEND: mysql
