--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     google-auth >= 2.6
     fontawesomefree >= 6.1
     django-autocomplete-light >= 3.9
-    django-filter >= 23.2
+    django-filter > 2.0
     django-tables2 >= 2.4
     django-simple-history >= 3.1.1
     django-extensions >= 3.1.5
