Downgrade mysqlclient to lower version temporarily
The new version of mysqlclient requires pkg-config or that you
set environemnt variables, which breaks soem CI. For now, downgrade
the pkg-config requirements so that we can then fix them later. Note
that CI is also breaking for other unknown reasons in a different
branch, so we can see if it breaks here too...
requires you

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps =
     django-coverage-plugin
     freezegun
     django-test-migrations
-    mysql: mysqlclient
+    mysql: mysqlclient==2.1.1
 passenv =
     DBNAME
     DBUSER
