--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ isolated_build = true
 deps =
     django32: Django==3.2.*
     django40: Django==4.0.*
-    django41: Django==4.1.*
+    django41: Django>=4.1.0,<4.2.0
     django42: Django==4.2.*
     responses
     factory-boy
