--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,14 @@
 [tox]
 envlist = py{38,39,310}-django{32,41,42}-{sqlite,mysql}
 isolated_build = true
+# We need 4.4.0 for constrain_package_deps.
+min_version = 4.4.0
 
 [testenv]
 deps =
     django32: Django==3.2.*
     django40: Django==4.0.*
-    django41: Django>=4.1.0,<4.2.0
+    django41: Django==4.1.*
     django42: Django==4.2.*
     responses
     factory-boy
@@ -16,6 +18,7 @@ deps =
     freezegun
     django-test-migrations
     mysql: mysqlclient==2.1.1
+constrain_package_deps = true
 passenv =
     DBNAME
     DBUSER
