Remove pinned mysqlclient version from CI
This should make the CI fail with mysqlclient>=2.2.

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ deps =
     django-coverage-plugin
     freezegun
     django-test-migrations
-    mysql: mysqlclient==2.1.1
+    mysql: mysqlclient
 constrain_package_deps = true
 passenv =
     DBNAME
@@ -33,6 +33,10 @@ commands =
 [testenv:py{38,39,310}-django{32,41,42}-mysql]
 setenv =
     DBBACKEND = mysql
+    PKG_CONFIG_PATH="/opt/local/lib/mariadb-10.5/pkgconfig/"
+    MYSQLCLIENT_LDFLAGS=`pkg-config --libs libmariadb`
+    MYSQLCLIENT_CFLAGS=`pkg-config --cflags libmariadb`
+
 
 [testenv:py{38,39,310}-django{32,41,42}-sqlite]
 setenv =
