--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
         python -m pip install --upgrade tox tox-gh-actions
 
     - name: Test with tox
-      run: tox
+      run: tox -vvvvv
       env:
         DBBACKEND: sqlite3
         DBNAME: ":memory:"
