--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,9 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install --upgrade tox tox-gh-actions
 
+    - name: Collect Workflow Telemetry
+      uses: runforesight/workflow-telemetry-action@v1
+
     - name: Test with tox
       run: |
         df
@@ -105,6 +108,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade tox tox-gh-actions
+
+    - name: Collect Workflow Telemetry
+      uses: runforesight/workflow-telemetry-action@v1
 
     - name: Test with tox - 10.3
       if: ${{ matrix.mariadb-version == '10.3' }}
