--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,6 @@ env:
   DOCKER_BUILDKIT: 1
   COMPOSE_DOCKER_CLI_BUILD: 1
   PIP_VERBOSE: 3
-  PIP_NO_CACHE_DIR: off
 
 on:
   pull_request:
@@ -46,6 +45,8 @@ jobs:
       max-parallel: 5
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
+    env:
+      PIP_NO_CACHE_DIR: off
 
     steps:
     - uses: actions/checkout@v3.5.2
@@ -68,6 +69,7 @@ jobs:
       env:
         DBBACKEND: sqlite3
         DBNAME: ":memory:"
+        PIP_NO_CACHE_DIR: off
 
     - name: Upload coverage data
       uses: actions/upload-artifact@v3
@@ -120,6 +122,7 @@ jobs:
         DBUSER: root
         DBPASSWORD: rootpw
         DBHOST: 127.0.0.1
+        PIP_NO_CACHE_DIR: off
 
     - name: Test with tox - not 10.3
       if: ${{ matrix.mariadb-version != '10.3' }}
