--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,10 @@
 name: ci-tox
 
+# Enable Buildkit and let compose use it to speed up image building
+env:
+  DOCKER_BUILDKIT: 1
+  COMPOSE_DOCKER_CLI_BUILD: 1
+
 on:
   pull_request:
     branches: [ "master", "main" ]
@@ -23,6 +28,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
+          cache: pip
+          cache-dependency-path: |
+            requirements/base.txt
+            requirements/dev.txt
 
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.0
@@ -32,9 +41,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      max-parallel: 1
+      max-parallel: 10
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
+    env:
+      PIP_NO_CACHE_DIR: off
 
     steps:
     - uses: actions/checkout@v3.5.2
@@ -50,10 +61,11 @@ jobs:
         python -m pip install --upgrade tox tox-gh-actions
 
     - name: Test with tox
-      run: tox -vvvvv
+      run: tox
       env:
         DBBACKEND: sqlite3
         DBNAME: ":memory:"
+        PIP_NO_CACHE_DIR: off
 
     - name: Upload coverage data
       uses: actions/upload-artifact@v3
@@ -66,7 +78,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      max-parallel: 1
+      max-parallel: 10
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
         mariadb-version: ["10.3", "10.5"]
@@ -96,17 +108,18 @@ jobs:
 
     - name: Test with tox - 10.3
       if: ${{ matrix.mariadb-version == '10.3' }}
-      run: tox -vvvvv --skip-env ".+?-django42-mysql"
+      run: tox --skip-env ".+?-django42-mysql"
       env:
         DBBACKEND: mysql
         DBNAME: test
         DBUSER: root
         DBPASSWORD: rootpw
         DBHOST: 127.0.0.1
+        PIP_NO_CACHE_DIR: off
 
     - name: Test with tox - not 10.3
       if: ${{ matrix.mariadb-version != '10.3' }}
-      run: tox -vvvvv
+      run: tox
       env:
         DBBACKEND: mysql
         DBNAME: test
