--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,9 @@ envlist = py{38,39,310}-django{32,41,42}-{sqlite,mysql}
 isolated_build = true
 # We need 4.4.0 for constrain_package_deps.
 min_version = 4.4.0
+passenv =
+    PIP_VERBOSE
+    PIP_NO_CACHE_DIR
 
 [testenv]
 deps =
@@ -27,8 +30,7 @@ passenv =
     DBBACKEND
     DBPORT
 commands =
-    pip freeze
-    coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
+    python -m coverage run -p ./manage.py test anvil_consortium_manager --settings=anvil_consortium_manager.tests.settings.test
 
 [testenv:py{38,39,310}-django{32,41,42}-mysql]
 setenv =
