--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,7 @@ include LICENSE
 include README.md
 recursive-include anvil_consortium_manager/templates *
 recursive-include docs *
+recursive-exclude docs/_build *
+recursive-include anvil_consortium_manager/tests/test_app/templates *
+recursive-exclude example_site *
+exclude .coverage
