--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
       max-parallel: 10
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
-        mariadb-version: ["10.3", "10.5"]
+        mariadb-version: ["10.4"]
 
     services:
       database:
